# DocAnalyzer

DocAnalyzer/chatbot/: README.md  output.md  pyproject.toml
DocAnalyzer/chatbot/db/: chroma.sqlite3
DocAnalyzer/chatbot/src/docanalyzerbot/: crew.py  main.py
DocAnalyzer/chatbot/src/docanalyzerbot/config/: agents.yaml  tasks.yaml
